--- a/.cbmc-batch/jobs/Makefile.common
+++ b/.cbmc-batch/jobs/Makefile.common
@@ -24,6 +24,9 @@ SPACE :=$() $()
 COMMA :=,
 
 ################################################################
+# Useful functions
+
+################################################################
 # Setup paths to binaries
 # By default, use the version on your path; this can be overriden to select particular
 # versions of the tools. /usr/bin/goto-analyzer or ${HOME}/sw/goto-analyzer etc
