Fix: Windows cmake failing install() on implicit shared_libs variable

--- a/codebuild/windows-msvc-2015.yml
+++ b/codebuild/windows-msvc-2015.yml
@@ -16,6 +16,6 @@ version: 0.2
 phases:
   build:
     commands:
-      - .\codebuild\common-windows.bat -G "Visual Studio 14 2015 Win64"
+      - .\codebuild\common-windows.bat -DBUILD_SHARED_LIBS=OFF -G "Visual Studio 14 2015 Win64"
       - .\codebuild\common-windows.bat -DBUILD_SHARED_LIBS=ON -G "Visual Studio 14 2015 Win64"
 
