--- a/codebuild/windows-msvc-2017.yml
+++ b/codebuild/windows-msvc-2017.yml
@@ -16,5 +16,5 @@ version: 0.2
 phases:
   build:
     commands:
-      - .\codebuild\common-windows.bat -G "Visual Studio 15 2017 Win64"
+      - .\codebuild\common-windows.bat -DBUILD_SHARED_LIBS=OFF -G "Visual Studio 15 2017 Win64"
       - .\codebuild\common-windows.bat --trace-expand -DBUILD_SHARED_LIBS=ON -G "Visual Studio 15 2017 Win64"
