--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -1,5 +1,5 @@
 ---
-name: macOS10.14 build and test
+name: macOS build and test AWS Encryption SDK for C
 
 on:
   pull_request:
@@ -9,11 +9,15 @@ on:
 
 jobs:
   OSX:
-    runs-on: macOS-10.14
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [macOS-10.14, macos-latest]
+        openssl_version: [openssl@1.1]
 
     steps:
-      - name: Install Dependencies
-        run: brew install openssl@1.1
+      - run: brew install ${{ matrix.ssl_version }}
 
       - name: Checkout PR
         uses: actions/checkout@v2
@@ -35,9 +39,11 @@ jobs:
           xcodebuild -target install
 
       - name: Build C-ESDK
+        env:
+          OPENSSL_VERSION: ${{ matrix.openssl_version }}
         run: |
           mkdir build-aws-encryption-sdk-c || true
           cd build-aws-encryption-sdk-c
-          cmake -G Xcode -DBUILD_SHARED_LIBS=ON -DOPENSSL_ROOT_DIR="/usr/local/opt/openssl@1.1" ../
+          cmake -G Xcode -DBUILD_SHARED_LIBS=ON -DOPENSSL_ROOT_DIR="/usr/local/opt/${OPENSSL_VERSION}" ../
           xcodebuild -target ALL_BUILD
           xcodebuild -scheme RUN_TESTS
