--- a/.cbmc-batch/jobs/Makefile.common
+++ b/.cbmc-batch/jobs/Makefile.common
@@ -80,6 +80,8 @@ COMMON_REPO_NAME ?= aws-c-common-for-cryptosdk-proofs
 COMMONDIR ?= $(BASEDIR)/$(COMMON_REPO_NAME)
 COMMON_HELPERDIR ?= $(COMMONDIR)/.cbmc-batch
 
+HARNESS_NAME ?= $(ENTRY)_harness.c
+
 ################################################################
 # Setup include directory order
 # Helper-inc must go first, so it can override other includes.
@@ -121,6 +123,9 @@ REMOVE_FUNCTION_BODY += --remove-function-body s_default_realloc
 ABSTRACTIONS += $(LINKFARM)/c-common-helper-stubs/abort_override_assert_false.c
 REMOVE_FUNCTION_BODY += --remove-function-body abort
 ################################################################
+
+REMOVE_FUNCTION_BODY += $(ADDITIONAL_REMOVE_FUNCTION_BODY)
+DEPENDENT_GOTOS = $(patsubst %.c,%.goto,$(DEPENDENCIES))
 
 REMOVE_FUNCTION_BODY += $(ADDITIONAL_REMOVE_FUNCTION_BODY)
 DEPENDENT_GOTOS = $(patsubst %.c,%.goto,$(DEPENDENCIES))
