--- a/include/aws/cryptosdk/version.h.in
+++ b/include/aws/cryptosdk/version.h.in
@@ -16,7 +16,7 @@
 #ifndef AWS_CRYPTOSDK_VERSION_H
 #define AWS_CRYPTOSDK_VERSION_H
 
-/*! \mainpage The AWS Encryption SDK for C
+/*! The AWS Encryption SDK for C
  *
  * The AWS Encryption SDK for C is a client-side encryption library designed to make it easy for
  * everyone to encrypt and decrypt data using industry standards and best practices. It uses a
