--- a/.cbmc-batch/jobs/aws_cryptosdk_md_update/cbmc-batch.yaml
+++ b/.cbmc-batch/jobs/aws_cryptosdk_md_update/cbmc-batch.yaml
@@ -1,1 +1,4 @@
+cbmcflags: "--memory-leak-check;--bounds-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwind;1;--unwinding-assertions;--object-bits;8"
+expected: "SUCCESSFUL"
+goto: aws_cryptosdk_md_update_harness.goto
 jobos: ubuntu16
