--- a/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_eq/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_eq/Makefile
@@ -16,20 +16,26 @@
 sinclude ../Makefile.local
 #otherwise, use the default values
 include ../Makefile.local_default
+include ../Makefile.string
+include ../Makefile.aws_array_list
+
+CBMC_UNWINDSET += --unwindset aws_cryptosdk_keyring_trace_is_valid.0:$(shell echo $$((1 + $(MAX_ITEM_SIZE)))),ensure_trace_has_allocated_records.0:$(shell echo $$((1 + $(MAX_ITEM_SIZE))))
+
+ENTRY = aws_cryptosdk_keyring_trace_eq_harness
 
 DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/make_common_data_structures.c
 DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/proof_allocators.c
+DEPENDENCIES += $(SRCDIR)/c-common-helper-src/utils.c
 DEPENDENCIES +=	$(SRCDIR)/c-common-src/byte_buf.c
 DEPENDENCIES +=	$(SRCDIR)/c-common-src/common.c
 DEPENDENCIES +=	$(SRCDIR)/c-common-src/error.c
 DEPENDENCIES +=	$(SRCDIR)/c-common-src/string.c
 DEPENDENCIES +=	$(SRCDIR)/c-enc-sdk-src/cipher.c
-DEPENDENCIES +=	$(SRCDIR)/c-enc-sdk-src/keyring_trace.c
+DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/keyring_trace.c
 DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.c
 
-ENTRY = aws_cryptosdk_keyring_trace_record_clean_up_harness
+
 
 ###########
 
 include ../Makefile.common
-include ../Makefile.string
