--- a/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_eq/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_eq/Makefile
@@ -19,7 +19,7 @@ include ../Makefile.local_default
 include ../Makefile.string
 include ../Makefile.aws_array_list
 
-CBMC_UNWINDSET += --unwindset aws_cryptosdk_keyring_trace_is_valid.0:$(shell echo $$((1 + $(MAX_ITEM_SIZE)))),ensure_trace_has_allocated_records.0:$(shell echo $$((1 + $(MAX_ITEM_SIZE))))
+CBMC_UNWINDSET += --unwindset aws_cryptosdk_keyring_trace_is_valid.0:$(shell echo $$((1 + $(MAX_ITEM_SIZE)))),ensure_trace_has_allocated_records.0:$(shell echo $$((1 + $(MAX_ITEM_SIZE)))),aws_cryptosdk_keyring_trace_eq.0:$(shell echo $$((1 + $(MAX_ITEM_SIZE)))),memcmp.0:$(shell echo $$((1 + $(MAX_STRING_LEN))))
 
 ENTRY = aws_cryptosdk_keyring_trace_eq_harness
 
