--- a/.cbmc-batch/jobs/aws_cryptosdk_md_abort/cbmc-batch.yaml
+++ b/.cbmc-batch/jobs/aws_cryptosdk_md_abort/cbmc-batch.yaml
@@ -1,4 +1,4 @@
-cbmcflags: "--memory-leak-check;--bounds-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwind;1;--unwinding-assertions;--object-bits;8"
+cbmcflags: "--memory-leak-check;--flush;--bounds-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwind;1;--unwinding-assertions;--object-bits;8"
 expected: "SUCCESSFUL"
 goto: aws_cryptosdk_md_abort_harness.goto
 jobos: ubuntu16
