--- a/.cbmc-batch/jobs/aws_cryptosdk_compare_hash_elems_by_key_string/cbmc-batch.yaml
+++ b/.cbmc-batch/jobs/aws_cryptosdk_compare_hash_elems_by_key_string/cbmc-batch.yaml
@@ -1,4 +1,4 @@
-cbmcflags: "--flush;--bounds-check;--conversion-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--pointer-primitive-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwind;1;--unwinding-assertions;--unwindset;memcmp.0:17;--object-bits;8"
+cbmcflags: "--flush;--bounds-check;--conversion-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwind;1;--unwinding-assertions;--unwindset;memcmp.0:17;--object-bits;8"
 expected: "SUCCESSFUL"
 goto: aws_cryptosdk_compare_hash_elems_by_key_string_harness.goto
 jobos: ubuntu16
