--- a/.cbmc-batch/jobs/Makefile.common
+++ b/.cbmc-batch/jobs/Makefile.common
@@ -316,7 +316,7 @@ clean:
 	$(RM) *.goto
 	$(RM) $(DEPENDENT_GOTOS)
 	$(RM) *.log
-	$(RM) cbmc.log property.xml coverage.xml TAGS
+	$(RM) cbmc.log property.xml coverage.xml TAGS-*
 	$(RM) *~ \#*
 
 veryclean: clean
