--- a/.cbmc-batch/jobs/Makefile.common
+++ b/.cbmc-batch/jobs/Makefile.common
@@ -51,7 +51,7 @@ CBMCFLAGS += --flush
 CBMCFLAGS += --bounds-check
 CBMCFLAGS += --conversion-check
 CBMCFLAGS += --div-by-zero-check
-CBMCFLAGS += --enum-range-check
+#CBMCFLAGS += --enum-range-check
 CBMCFLAGS += --float-overflow-check
 CBMCFLAGS += --nan-check
 CBMCFLAGS += --pointer-check
@@ -316,7 +316,7 @@ clean:
 	$(RM) *.goto
 	$(RM) $(DEPENDENT_GOTOS)
 	$(RM) *.log
-	$(RM) cbmc.log property.xml coverage.xml TAGS
+	$(RM) cbmc.log property.xml coverage.xml TAGS-*
 	$(RM) *~ \#*
 
 veryclean: clean
