Update OpenSSL stubs
Signed-off-by: Felipe R. Monteiro <felisous@amazon.com>

--- a/.cbmc-batch/jobs/aws_cryptosdk_decrypt_body/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_decrypt_body/Makefile
@@ -1,4 +1,4 @@
-# Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License"). You may not use
 # this file except in compliance with the License. A copy of the License is
@@ -11,13 +11,11 @@
 # implied. See the License for the specific language governing permissions and
 # limitations under the License.
 
-###########
 # if Makefile.local exists, use it. This provides a way to override the defaults
 sinclude ../Makefile.local
 #otherwise, use the default values
 include ../Makefile.local_default
 include ../Makefile.aws_byte_buf
-#include ../Makefile.string
 
 MAX_BUFFER_SIZE = 4
 UNWINDSET += __CPROVER_file_local_cipher_c_flush_openssl_errors.0:2
@@ -44,7 +42,5 @@ REMOVE_FUNCTION_BODY += --remove-function-body nondet_compare
 REMOVE_FUNCTION_BODY += --remove-function-body aws_raise_error_private
 REMOVE_FUNCTION_BODY += --remove-function-body EVP_sha256
 REMOVE_FUNCTION_BODY += --remove-function-body EVP_sha384
-
-###########
 
 include ../Makefile.common
