--- a/.cbmc-batch/jobs/aws_cryptosdk_encrypt_body/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_encrypt_body/Makefile
@@ -11,15 +11,18 @@
 # implied. See the License for the specific language governing permissions and
 # limitations under the License.
 
-###########
 # if Makefile.local exists, use it. This provides a way to override the defaults
 sinclude ../Makefile.local
 #otherwise, use the default values
 include ../Makefile.local_default
 include ../Makefile.aws_byte_buf
 
+# Use a smaller bound for buffer so the proof runs on a reasonable time
+# Expected runtime is 2min for this bound
 MAX_BUFFER_SIZE = 4
-UNWINDSET += aws_cryptosdk_encrypt_body.0:14#$(shell echo $$((1 + $(MAX_BUFFER_SIZE))))
+
+UNWINDSET += aws_cryptosdk_encrypt_body.0:$(shell echo $$((1 + $(MAX_BUFFER_SIZE))))
+# This bound must be 37 because it process a string of fixed size in update_frame_aad
 UNWINDSET += strlen.0:37
 
 CBMCFLAGS +=
@@ -36,12 +39,10 @@ DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/cipher.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/openssl/evp_override.goto
 
-REMOVE_FUNCTION_BODY += --remove-function-body EVP_DecryptUpdate
-REMOVE_FUNCTION_BODY += --remove-function-body nondet_compare
 REMOVE_FUNCTION_BODY += --remove-function-body aws_raise_error_private
+REMOVE_FUNCTION_BODY += --remove-function-body EVP_DecryptUpdate
 REMOVE_FUNCTION_BODY += --remove-function-body EVP_sha256
 REMOVE_FUNCTION_BODY += --remove-function-body EVP_sha384
-
-###########
+REMOVE_FUNCTION_BODY += --remove-function-body nondet_compare
 
 include ../Makefile.common
