--- a/.cbmc-batch/jobs/list_copy_all/cbmc-batch.yaml
+++ b/.cbmc-batch/jobs/list_copy_all/cbmc-batch.yaml
@@ -1,4 +1,4 @@
-cbmcflags: "--flush;--bounds-check;--conversion-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--pointer-primitive-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwind;1;--unwinding-assertions;--unwindset;list_copy_all.5:3,list_copy_all.6:3;--object-bits;8"
+cbmcflags: "--flush;--bounds-check;--conversion-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--pointer-primitive-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwind;1;--unwinding-assertions;--unwindset;__CPROVER_file_local_list_utils_c_list_copy_all.5:3,__CPROVER_file_local_list_utils_c_list_copy_all.6:3;--object-bits;8"
 expected: "SUCCESSFUL"
 goto: list_copy_all_harness.goto
 jobos: ubuntu16
