--- a/.cbmc-batch/jobs/aws_cryptosdk_multi_keyring_add_child/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_multi_keyring_add_child/Makefile
@@ -18,13 +18,13 @@ include ../Makefile.local_default
 
 ENTRY = aws_cryptosdk_multi_keyring_add_child_harness
 
+DEPENDENCIES += $(SRCDIR)/c-common-helper-src/make_common_data_structures.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.c
+DEPENDENCIES += $(SRCDIR)/c-common-helper-src/utils.c
 DEPENDENCIES += $(SRCDIR)/c-common-src/array_list.c
 DEPENDENCIES += $(SRCDIR)/c-common-src/common.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/error.c
 DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/materials.c
 DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/multi_keyring.c
-
-REMOVE_FUNCTION_BODY += --remove-function-body aws_last_error
+DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.c
 
 include ../Makefile.common
